# trading-strat

./: .gitignore  main.py  optimize.py  pyproject.toml  requirements.txt
tests/: test_research_framework.py
trading_strat/: __init__.py  backtester.py  dashboard.py  data.py  features.py  logging_config.py  ml.py  plotter.py  regime.py  risk.py  slippage.py  strategies.py  walk_forward.py
