[project]
name = "trading-strat"
version = "0.1.0"
description = "Modular algorithmic trading research system with data, features, strategies, backtesting, risk, and visualization."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.18",
    "yfinance>=0.2.40",
    "scikit-learn>=1.4",
    "optuna>=3.6",
]

[project.optional-dependencies]
crypto = ["ccxt>=4.0"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
